# mergekit

./: .env.atlascloud.example  .gitignore  .pre-commit-config.yaml  CLA.md  CONTRIBUTING.md  LICENSE  LRP_Merge.ipynb  README.md  architecture.py  bakllama.py  colab.ipynb  common.py  config.py  direct_whisper_lora_extract.py  finetune_fakenews.py  graph.py  graph_out_architecture.py  kaggle.ipynb  lazy_tensors.py  lrp_computer.py  lrp_merge_pipeline.py  main.py  merge_scan_linear.py  merge_scan_task_arithmetic.py  merger.py  moe.md  moe_defs.py  my_attempt_at_gpt2.json  notebook.ipynb  plan.py  push_to_hub_linear.py  push_to_hub_task_arithmetic.py  push_to_hub_ties.py  pyproject.toml  requirements.txt  run_metrics.py  script_cma.sh  script_de.sh  script_sade.sh  script_teste.sh  (+5 more)
.github/workflows/: cla.yml  pre-commit.yml  ruff.yml
data/: preprocessing.py
docs/: atlascloud_provider.md  create_a_merge_method.md  evolve.md  lrp_merge.md  merge_methods.md  moe.md  multimerge.md  tokensurgeon.md  whisper-merging-guide.md
docs/providers/: atlas-cloud.md
examples/: arcee_fusion.yml  bio-merge.yml  cabs.yml  chipalign.yml  core_space.yml  evo_bert_large.yml  gpt2-small.yml  gradient-slerp.yml  linear.yml  linear_small.yml  lrp.yml  mega.yml  metrics-1.yml  metrics-llama-1v2.yml  metrics-llama-codev2.yml  metrics-small.yml  orcamini-platy-44layer.yml  ties.yml  vlm-linear.yml  vlm-ties.yml  whisper-encoder-decoder-test.yml  whisper-encoder-decoder-weighted.yml  whisper-lora-multilingual.yml  whisper-merge-multilingual.yml  zipit.yml
llmtailor/: card.py  common.py  config.py  merge.py  options.py  plan.py  sparsify.py
llmtailor/architecture/: __init__.py  auto.py  base.py  json_definitions.py  moe_defs.py
llmtailor/evo/: actors.py  config.py  genome.py  helpers.py  monkeypatch.py  strategy.py
llmtailor/io/: __init__.py  lazy_tensor_loader.py  loader.py  tasks.py
llmtailor/merge_methods/: __init__.py  arcee_fusion.py  base.py  easy_define.py  generalized_task_arithmetic.py  karcher.py  linear.py  model_stock.py  multislerp.py  nearswap.py  nuslerp.py  passthrough.py  rectify_embed.py  registry.py  sce.py  slerp.py
llmtailor/moe/: __init__.py  arch.py  common.py  config.py  deepseek.py  mixtral.py  qwen.py  router.py
llmtailor/scripts/: bakllama.py  evolve.py  extract_lora.py  fill_missing_params.py  layershuffle.py  legacy.py  merge_raw_pytorch.py  moe.py  multimerge.py  run_yaml.py  tokensurgeon.py
llmtailor/tokenizer/: __init__.py  build.py  config.py  embed.py
llmtailor/tokensurgeon/: magikarp.py  pca.py  subword.py  token_basis.py
merge_methods/: __init__.py  base.py  easy_define.py  generalized_task_arithmetic.py  linear.py  passthrough.py  registry.py  sce.py  slerp.py  ties.py
mergekit/: architecture.py  atlascloud.py  card.py  common.py  config.py  graph.py  lazy_pickle.py  lazy_tensors.py  lazy_unpickle.py  lrp_computer.py  matching.py  measure.py  merge.py  multigpu_executor.py  options.py  permuter.py  plan.py  pyvenv.cfg  sparsify.py  subspace_helpers.py  tasks.py  tokenizer.py
mergekit/_data/: models_and_datasets.json  models_and_datasets.py
mergekit/architecture/: __init__.py  auto.py  base.py  conversion.py  decoder_only.py  deepseek_v3.py  helpers.py  json_definitions.py  load.py  mixtral.py  moe_defs.py  multimodule.py  qwen35.py
mergekit/evo/: actors.py  config.py  differential_evolution.py  genome.py  helpers.py  model_eval.py  monkeypatch.py  strategy.py
mergekit/io/: __init__.py  lazy_tensor_loader.py  lazy_unpickle.py  loader.py  tasks.py  tensor_writer.py
mergekit/merge_methods/: __init__.py  arcee_fusion.py  base.py  cabs.py  core_space.py  easy_define.py  encoder_decoder_weighted.py  generalized_anysize.py  generalized_swapping_values.py  generalized_task_arithmetic.py  karcher.py  linear.py  lrp.py  model_stock.py  multislerp.py  nearswap.py  nuslerp.py  passthrough.py  pcb.py  ram.py  rectify_embed.py  registry.py  sce.py  slerp.py  taskarithmetic.py  ties.py  tokenizer_permute.py  zipit.py  zipit_matching_functions.py
mergekit/metric_methods/: MSE.py  PCA_rank.py  SMAPE.py  __init__.py  aggregator_metrics.py  all_metrics.py  base.py  cossim.py  metrics.py  scale.py
mergekit/moe/: __init__.py  arch.py  common.py  config.py  deepseek.py  kormo.py  mixtral.py  qwen.py  qwen3.py  router.py
mergekit/plot_tools/: plot_tools.py
mergekit/scripts/: align_model_weights.py  atlascloud.py  bakllama.py  check_compat.py  diff.py  dump_m_and_u.py  dump_out_activations.py  dump_out_attentions.py  dump_out_features.py  dump_out_m_and_u.py  dump_out_sim_metrics.py  evolve.py  extract_lora.py  extract_whisper_lora.py  fill_missing_params.py  layershuffle.py  legacy.py  megamerge.py  merge_raw_pytorch.py  mixtral_moe.py  moe.py  multimerge.py  permute_random.py  run_metrics.py  run_yaml.py  tokensurgeon.py  zipit_fast_prototype.py  zipit_metrics.py  zipit_utils.py
mergekit/tokenizer/: __init__.py  build.py  config.py  embed.py  normalization.py
mergekit/tokensurgeon/: __init__.py  common_interpolation.py  magikarp.py  omp.py  pca.py  rope_helpers.py  subword.py  token_basis.py
mergekit_repo/mergekit/: lrp_computer.py
mergekit_repo/tests/: test_lrp_merge.py
recipes/R1-Distill-Qwen-Math-7B/: v00.00_v01.00_linear.yml  v00.00_v01.00_task-arithmetic.yml  v00.00_v01.00_ties.yml  (+2 more)
representations/: config.yml  experiment_setup.py  representation_metrics.py  representations.py  store_representations.py  visualise_representation_results.py
testes_modelos/: cmaes_metrics.ipynb  de_metrics.ipynb  notebook.ipynb  sade_metrics.ipynb  trabalho_2_metricas.ipynb
tests/: common.py  test_architecture.py  test_architecture_conversion.py  test_architecture_pydantic_schema.py  test_atlascloud_provider.py  test_basic_merges.py  test_chat_template.py  test_config_filter.py  test_core_space.py  test_graph.py  test_io.py  test_lazy_unpickle.py  test_merges.py  test_modelref.py  test_moe_init.py  test_moe_orthogonal.py  test_qwen35_architecture.py  test_sparsify.py  test_tokenizer.py  test_whisper_merges.py
venv311/: pyvenv.cfg
(+108 files in other folders)
