[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mergekit"
description = "Tools for merging pre-trained large language models"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
version = "0.0.6"
authors = [
    { name = "fizz~", email = "fizzarolli@riseup.net" },
    { name = "Charles Goddard", email = "chargoddard@gmail.com" }
]
dependencies = [
    "torch~=2.5.0",
    "tqdm==4.67.1",
    "click==8.1.8",
    "safetensors~=0.5.2",
    "accelerate~=1.3.0",
    "pydantic~=2.10.6",
    "immutables==0.20",
    "transformers>=4.45.2",
    "tokenizers>=0.20.1",
    "huggingface_hub",
    "peft",
    "typing-extensions",
    "sentencepiece",
    "protobuf",
    "scipy",
    "datasets",
]
requires-python = ">=3.10"

[project.optional-dependencies]
vllm = ["vllm==0.3.2", "lm_eval[vllm]"]

[project.urls]
repository = "https://github.com/cg123/mergekit"

[project.scripts]
mergekit-yaml = "mergekit.scripts.run_yaml:main"
mergekit-mega = "mergekit.scripts.megamerge:main"
mergekit-layershuffle = "mergekit.scripts.layershuffle:main"
mergekit-moe = "mergekit.scripts.moe:main"
mergekit-tokensurgeon = "mergekit.scripts.tokensurgeon:main"
mergekit-extract-lora = "mergekit.scripts.extract_lora:main"

[tool.hatch.envs.default]
installer = "uv"
extra-dependencies = [
    "ruff~=0.9.4",
    "pre-commit~=4.1.0",
]

[tool.hatch.envs.default.extra-scripts]
lint = "ruff check"
lint-fix = "ruff check --fix --unsafe-fixes"
format = "ruff format"

[tool.hatch.envs.hatch-test]
extra-dependencies = ["pytest"]

[tool.hatch.build.targets.sdist]
include = [
    "mergekit/",
    "examples/",
    "tests/",
    "docs/",
]

[tool.hatch.build.targets.wheel]
packages = [
    "mergekit",
    "mergekit.io",
    "mergekit.merge_methods",
    "mergekit.moe",
    "mergekit.scripts",
    "mergekit.tokenizer",
    "mergekit._data",
    "mergekit._data.architectures",
    "mergekit._data.chat_templates",
]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince20:huggingface_hub.*:",
    "ignore::FutureWarning:huggingface_hub.*:",
    "ignore:(read_text|open_text|contents|is_resource) is deprecated:DeprecationWarning", # yes i know, but files() doesn't exist in 3.8
]
testpaths = ["tests"]
